discussion/kv_engine/178235/178235_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: create BucketManager::setClusterConfig

This is a preparation for letting setClusterConfig create
a configuration only bucket

Change-Id: Id40a298fd725dc8e457adb78e0e04b28a67e3d54

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-31 10:42:07.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-31 10:48:25.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48020/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48020/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40355/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40355/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20337/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20337/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8964/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8964/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19181/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2946:22: error: constexpr variable "invalid_format" must be initialized by a constant expression [clang-diagnostic-error]
  FMT_CONSTEXPR bool invalid_format =
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3071:13: note: in instantiation of function template specialization "fmt::v8::detail::check_format_string<const char *, FMT_COMPILE_STRING, 0>" requested here
    detail::check_format_string<Args...>(s);
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/cluster_config_executor.cc:233:37: note: in instantiation of function template specialization "fmt::v8::basic_format_string<char, const char *>::basic_format_string<FMT_COMPILE_STRING, 0>" requested here
                                    LOG_WARNING(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:177:5: note: expanded from macro "LOG_WARNING"
    CB_LOG_ENTRY(spdlog::level::level_enum::warn, __VA_ARGS__)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:159:37: note: expanded from macro "CB_LOG_ENTRY"
            _logger_->log(severity, CHECK_FMT_STRING(fmt), __VA_ARGS__); \
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:152:31: note: expanded from macro "CHECK_FMT_STRING"
#define CHECK_FMT_STRING(fmt) FMT_STRING(fmt)
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/format.h:2383:23: note: expanded from macro "FMT_STRING"
#define FMT_STRING(s) FMT_STRING_IMPL(s, fmt::compile_string, )
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/format.h:2360:3: note: expanded from macro "FMT_STRING_IMPL"
  [] {                                                                     \
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:693:19: note: non-constexpr function "on_error" cannot be used in a constant expression
    ErrorHandler::on_error(message);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2697:32: note: in call to "&checker(s, {}).context_->on_error(&"argument not found"[0])"
    if (id >= num_args_) this->on_error("argument not found");
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2910:59: note: in call to "&checker(s, {}).context_->next_arg_id()"
  FMT_CONSTEXPR auto on_arg_id() -> int { return context_.next_arg_id(); }
                                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2591:42: note: in call to "&checker(s, {})->on_arg_id()"
    handler.on_replacement_field(handler.on_arg_id(), begin);
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2660:13: note: in call to "parse_replacement_field(&"Failed to push cluster configuration for bucket [{}]: {}"[55], &"Failed to push cluster configuration for bucket [{}]: {}"[56], checker(s, {}))"
    begin = parse_replacement_field(p, end, handler);
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2947:8: note: in call to "parse_format_string({&"Failed to push cluster configuration for bucket [{}]: {}"[0], 56}, checker(s, {}))"
      (parse_format_string<true>(s, checker(s, {})), true);
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:618:29: note: declared here
  FMT_NORETURN FMT_API void on_error(const char* message);
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19181/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2946:22:
error: constexpr variable "invalid_format" must be initialized by a constant expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19181/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8867/ : FAILURE

Compile error at [2022-07-31T10:46:35.299Z] tlm/deps/fmt.exploded/include/fmt/core.h:2946:22:
error: constexpr variable "invalid_format" must be initialized by a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8867/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22171/ : FAILURE

Compile error at [2022-07-31T10:43:18.667Z] tlm/deps/fmt.exploded/include/fmt/core.h:2946:22:
error: constexpr variable "invalid_format" must be initialized by a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22171/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21095/ : FAILURE

Compile error at [2022-07-31T10:46:08.537Z] tlm/deps/fmt.exploded/include/fmt/core.h:2697:40:
error: ?constexpr void fmt::v8::basic_format_parse_context<Char, ErrorHandler>::on_error(const char*) [with Char = char; ErrorHandler = fmt::v8::detail::error_handler]? called in a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21095/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21454/ : FAILURE

Compile error at [2022-07-31T10:46:11.012Z] tlm/deps/fmt.exploded/include/fmt/core.h:2697:40:
error: ?constexpr void fmt::v8::basic_format_parse_context<Char, ErrorHandler>::on_error(const char*) [with Char = char; ErrorHandler = fmt::v8::detail::error_handler]? called in a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21454/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29484/ : FAILURE

Compile error at [2022-07-31T10:43:42.357Z] tlm/deps/fmt.exploded/include/fmt/core.h:2946:22:
error: constexpr variable "invalid_format" must be initialized by a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29484/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18350/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
